change: Added media queries - It's now responsive ;D

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
       <div class="soft_skills">
         <h1>Soft Skills</h1>
-        <span>Solução de problemas</span>
-        <span>Flexibilidade e adaptabilidade</span>
-        <span>Atitude positiva</span>
-        <span>Trabalho em equipe</span>
-        <span>Resiliência</span>
+        <div class="soft_skills_list">
+          <span>Solução de problemas</span>
+          <span>Flexibilidade e adaptabilidade</span>
+          <span>Atitude positiva</span>
+          <span>Trabalho em equipe</span>
+          <span>Resiliência</span>
+        </div>
       </div>
     </main>
 
@@ -133,27 +135,29 @@
     </section>
 
     <section id="contact">
-      <h3 class="contact_title">Contato</h3>
-      <div class="contact_links">
-        <a href="https://www.facebook.com/achiles.matheus" target="_blank"
-          >Facebook</a
-        >
-        <a href="https://www.linkedin.com/in/achilesmatheus/" target="_blank"
-          >Linkedin</a
-        >
-        <a href="https://github.com/achilesmatheus" target="_blank">Github</a>
-        <a href="https://medium.com/@achiles1707" target="_blank">Medium</a>
-        <a href="mailto:achiles1707@gmail.com" target="_blank">Email</a>
-      </div>
-
-      <div class="contact_info">
-        <div class="phone">
-          <span>Telefone: +55 31 99520-2054</span>
-          <span>WhatsApp: +55 31 99520-2054</span>
+      <div class="container">
+        <h3 class="contact_title">Contato</h3>
+        <div class="contact_links">
+          <a href="https://www.facebook.com/achiles.matheus" target="_blank"
+            >Facebook</a
+          >
+          <a href="https://www.linkedin.com/in/achilesmatheus/" target="_blank"
+            >Linkedin</a
+          >
+          <a href="https://github.com/achilesmatheus" target="_blank">Github</a>
+          <a href="https://medium.com/@achiles1707" target="_blank">Medium</a>
+          <a href="mailto:achiles1707@gmail.com" target="_blank">Email</a>
         </div>
 
-        <div class="location">
-          <span>Estou em: Sete Lagoas - Mg</span>
+        <div class="contact_info">
+          <div class="phone">
+            <span>Telefone: +55 31 99520-2054</span>
+            <span>WhatsApp: +55 31 99520-2054</span>
+          </div>
+
+          <div class="location">
+            <span>Estou em: Sete Lagoas - Mg</span>
+          </div>
         </div>
       </div>
     </section>
