change: Added github code to project's section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
             class="project_title"
             >Bikcraft</a
           >
+          <span>-</span>
+          <a
+            href="https://github.com/achilesmatheus/bikcraft-01"
+            target="_blank"
+            class="project_title"
+            >Github</a
+          >
           <p class="project_description">
             Site responsivo criado no curso do professor André Rafael -
             Origamid. Flexbox, Grid Layout e tema escuro.
@@ -74,6 +81,13 @@
             class="project_title"
             >Brafé</a
           >
+          <span>-</span>
+          <a
+            href="https://github.com/achilesmatheus/brafe"
+            target="_blank"
+            class="project_title"
+            >Github</a
+          >
           <p class="project_description">
             Site responsivo criado no curso do professor André Rafael -
             Origamid. Sistema de Grid próprio com 12 colunas utilizando Float e
@@ -90,10 +104,17 @@
         <div class="project">
           <span class="project_year">2021</span>
           <a
-            href="https://github.com/achilesmatheus/react-dogs"
+            href="https://react-dogs-kappa.vercel.app/"
             target="_blank"
             class="project_title"
             >React Dogs</a
+          >
+          <span>-</span>
+          <a
+            href="https://github.com/achilesmatheus/react-dogs"
+            target="_blank"
+            class="project_title"
+            >Github</a
           >
           <p class="project_description">
             Projeto criado no curso do professor André Rafael - Origamid. Rede
