change: Fix h1 size in media queries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Achiles Matheus. Portfólio de um Desenvolvedor Front-End."
+      content="Achiles Matheus Portfólio - Desenvolvedor Front-End."
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfólio - Achiles Matheus</title>
