Fix: h3 and h1 tags in media queries

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <header class="header">
+      <h3 class="nav_title">Achiles Matheus</h3>
       <nav class="nav">
-        <h1 class="nav_title">achiles.matheus</h1>
         <ul class="nav_menu">
           <li class="nav_menu_item"><a href="#projects">Projetos</a></li>
           <li class="nav_menu_item">
@@ -27,11 +27,11 @@
 
     <main class="main_content">
       <div class="description">
-        <h1>Desenvolvedor <br />Front-End</h1>
+        <h1 class="description_title">Desenvolvedor <br />Front-End</h1>
       </div>
 
       <div class="soft_skills">
-        <h1>Soft Skills</h1>
+        <h3>Soft Skills</h3>
         <div class="soft_skills_list">
           <span>Solução de problemas</span>
           <span>Flexibilidade e adaptabilidade</span>
@@ -47,11 +47,12 @@
       <div class="project_list">
         <div class="project">
           <span class="project_year">2022</span>
+          <h3>Bikcraft</h3>
           <a
             href="https://bikcraft-01.vercel.app/"
             target="_blank"
             class="project_title"
-            >Bikcraft</a
+            >Demonstração</a
           >
           <span>-</span>
           <a
@@ -75,11 +76,13 @@
 
         <div class="project">
           <span class="project_year">2022</span>
+          <h3>Brafé</h3>
+
           <a
             href="https://brafe-rho.vercel.app/"
             target="_blank"
             class="project_title"
-            >Brafé</a
+            >Demonstração</a
           >
           <span>-</span>
           <a
@@ -103,11 +106,12 @@
 
         <div class="project">
           <span class="project_year">2021</span>
+          <h3>React Dogs</h3>
           <a
             href="https://react-dogs-kappa.vercel.app/"
             target="_blank"
             class="project_title"
-            >React Dogs</a
+            >Demonstração</a
           >
           <span>-</span>
           <a
@@ -136,24 +140,24 @@
       <h1 class="qualifications_title">Qualificações</h1>
       <div class="curses_list">
         <div class="curse">
-          <h1>JavaScript Completo Es6</h1>
+          <h3>JavaScript Completo Es6</h3>
           <p>Duração: 74h</p>
           <p>Conclusão: 01/04/2021</p>
           <a
             href="https://www.origamid.com/certificate/2dcf4da8"
             target="_blank"
-            >Certificado</a
+            >Ver Certificado</a
           >
         </div>
 
         <div class="curse">
-          <h1>React Completo</h1>
+          <h3>React Completo</h3>
           <p>Duração: 36h</p>
           <p>Conclusão: 05/07/2021</p>
           <a
             href="https://www.origamid.com/certificate/b82c9d27"
             target="_blank"
-            >Certificado</a
+            >Ver Certificado</a
           >
         </div>
       </div>
@@ -175,9 +179,9 @@
         </div>
 
         <div class="contact_info">
-          <span>Telefone: +55 31 99520-2054</span>
-          <span>WhatsApp: +55 31 99520-2054</span>
-          <span>Estou em: Sete Lagoas - Mg</span>
+          <h4>Telefone: +55 31 99520-2054</h4>
+          <h4>WhatsApp: +55 31 99520-2054</h4>
+          <h4>Estou em: Sete Lagoas - Mg</h4>
         </div>
       </div>
     </section>
