Change from h3 and h4 to h1 for best accessibility

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="soft_skills">
-        <h3>Soft Skills</h3>
+        <h1 class="soft_skills_title">Soft Skills</h1>
         <div class="soft_skills_list">
           <span>Solução de problemas</span>
           <span>Flexibilidade e adaptabilidade</span>
@@ -47,25 +47,25 @@
       <div class="project_list">
         <div class="project">
           <span class="project_year">2022</span>
-          <h3>Bikcraft</h3>
+          <h1 class="project_title">Bikcraft</h1>
           <a
             href="https://bikcraft-01.vercel.app/"
             target="_blank"
-            class="project_title"
+            class="project_link"
             >Demonstração</a
           >
           <span>-</span>
           <a
             href="https://github.com/achilesmatheus/bikcraft-01"
             target="_blank"
-            class="project_title"
+            class="project_link"
             >Github</a
           >
           <p class="project_description">
             Site responsivo criado no curso do professor André Rafael -
             Origamid. Flexbox, Grid Layout e tema escuro.
           </p>
-          <span class="project_title">Habilidades</span>
+          <span class="project_link">Habilidades</span>
           <ul class="project_skills">
             <li>HTML</li>
             <li>CSS</li>
@@ -76,19 +76,19 @@
 
         <div class="project">
           <span class="project_year">2022</span>
-          <h3>Brafé</h3>
+          <h1 class="project_title">Brafé</h1>
 
           <a
             href="https://brafe-rho.vercel.app/"
             target="_blank"
-            class="project_title"
+            class="project_link"
             >Demonstração</a
           >
           <span>-</span>
           <a
             href="https://github.com/achilesmatheus/brafe"
             target="_blank"
-            class="project_title"
+            class="project_link"
             >Github</a
           >
           <p class="project_description">
@@ -96,7 +96,7 @@
             Origamid. Sistema de Grid próprio com 12 colunas utilizando Float e
             clear fix.
           </p>
-          <span class="project_title">Habilidades</span>
+          <span class="project_link">Habilidades</span>
           <ul class="project_skills">
             <li>HTML</li>
             <li>CSS</li>
@@ -106,25 +106,25 @@
 
         <div class="project">
           <span class="project_year">2021</span>
-          <h3>React Dogs</h3>
+          <h1 class="project_title">React Dogs</h1>
           <a
             href="https://react-dogs-kappa.vercel.app/"
             target="_blank"
-            class="project_title"
+            class="project_link"
             >Demonstração</a
           >
           <span>-</span>
           <a
             href="https://github.com/achilesmatheus/react-dogs"
             target="_blank"
-            class="project_title"
+            class="project_link"
             >Github</a
           >
           <p class="project_description">
             Projeto criado no curso do professor André Rafael - Origamid. Rede
             social com fotos de cães.
           </p>
-          <span class="project_title">Habilidades</span>
+          <span class="project_link">Habilidades</span>
           <ul class="project_skills">
             <li>HTML</li>
             <li>CSS</li>
@@ -140,7 +140,7 @@
       <h1 class="qualifications_title">Qualificações</h1>
       <div class="curses_list">
         <div class="curse">
-          <h3>JavaScript Completo Es6</h3>
+          <h1 class="curse_title">JavaScript Completo Es6</h1>
           <p>Duração: 74h</p>
           <p>Conclusão: 01/04/2021</p>
           <a
@@ -151,7 +151,7 @@
         </div>
 
         <div class="curse">
-          <h3>React Completo</h3>
+          <h1 class="curse_title">React Completo</h1>
           <p>Duração: 36h</p>
           <p>Conclusão: 05/07/2021</p>
           <a
@@ -179,9 +179,9 @@
         </div>
 
         <div class="contact_info">
-          <h4>Telefone: +55 31 99520-2054</h4>
-          <h4>WhatsApp: +55 31 99520-2054</h4>
-          <h4>Estou em: Sete Lagoas - Mg</h4>
+          <span>Telefone: +55 31 99520-2054</span>
+          <span>WhatsApp: +55 31 99520-2054</span>
+          <span>Estou em: Sete Lagoas - Mg</span>
         </div>
       </div>
     </section>
