--- a/index.html
+++ b/index.html
@@ -202,11 +202,12 @@
             </p>
             <span class="project_link">Habilidades</span>
             <ul class="project_skills">
-              <li>HTML</li>
-              <li>CSS</li>
               <li>JavaScript</li>
+              <li>TypeScript</li>
               <li>React</li>
-              <li>UI Design</li>
+              <li>C#</li>
+              <li>AspNet</li>
+              <li>Sqlite</li>
             </ul>
           </div>
         </div>
